fix: Change the spacing between columns Card: https://app.clickup.com/t/86by8d2y6

--- a/src/styles/globals/tokens/_content.tokens.css
+++ b/src/styles/globals/tokens/_content.tokens.css
@@ -8,7 +8,7 @@
     --content-wide-max-width: 1440px;
     --content-padding-to-border: var(--spacing-normal);
     --content-spacing-between-elements: var(--spacing-xl);
-    --content-spacing-between-columns: var(--spacing-l);
+    --content-spacing-between-columns: var(--spacing-between-consecutive-elements-normal);
     --topbar-height-small: 54px;
     --topbar-height-medium: 64px;
     --topbar-height-large: 80px;
